Added skiptests for new files

--- a/angular.json
+++ b/angular.json
@@ -6,10 +6,25 @@
     "huis-zeeduin": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
+			"@schematics/angular:application": {
+				"strict": true
+			},
+			"@schematics/angular:component": {
+				"skipTests": true
+			},
+			"@schematics/angular:class": {
+				"skipTests": true
+			},
+			"@schematics/angular:directive": {
+				"skipTests": true
+			},
+			"@schematics/angular:pipe": {
+				"skipTests": true
+			},
+			"@schematics/angular:service": {
+				"skipTests": true
+			}
+		},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
