--- a/angular.json
+++ b/angular.json
@@ -43,10 +43,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_module/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_module/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
